k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hwp
  name: hwp
  namespace: hwp
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: hwp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hwp
    spec:
      containers:
      - image: localhost:32000/hwp:1.0.1
        name: hwp
        ports:
        - containerPort: 8080
